--- a/20230814_JS_Clock/style.css
+++ b/20230814_JS_Clock/style.css
@@ -47,3 +47,23 @@ body {
   background-image: url(./images/bg_night.jpg);
 }
 
+
+/* 바탕 구름 1,2 */
+
+.wrapper > img:nth-child(1) {
+  position: absolute;
+  top: 45px;
+  left: 15px;
+  width: 800px;
+  opacity: 0.8;
+}
+
+.wrapper > img:nth-child(2) {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 1000px;
+  opacity: 0.6;
+}
+
+
