--- a/20230814_JS_Clock/style.css
+++ b/20230814_JS_Clock/style.css
@@ -27,6 +27,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100vh;
+  z-index: 1;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -54,6 +55,7 @@ body {
   position: absolute;
   top: 45px;
   left: 15px;
+  z-index: -1;
   width: 800px;
   opacity: 0.8;
 }
@@ -62,6 +64,7 @@ body {
   position: absolute;
   top: 20px;
   left: 0;
+  z-index: -1;
   width: 1000px;
   opacity: 0.6;
 }
@@ -71,6 +74,8 @@ body {
 .global-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 30px 50px;
 }
 
 .logo {
@@ -81,4 +86,34 @@ body {
   background-position: center;
   background-size: contain;
 }
+
+.gnb-list {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+}
+
+.gnb-list li {
+  margin-right: 30px;
+}
+.gnb-list li:last-child {
+  margin-right: 0;
+}
+.gnb-list li a {
+  font-weight: bold;
+}
+/* hover 시 밑줄 효과 */
+.gnb-list li a::after {
+  content: '';
+  display: block;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #444;
+  /* 중심점이 가상 요소 가운데 */
+  transform: scaleX(0);
+  transition: transform 500ms;
+}
+.gnb-list li a:hover::after {
+  transform: scaleX(1);
+}
+
 
