💄 margin, calc 조절 방식 추가

--- a/Javascript/20230817_object, array/style.css
+++ b/Javascript/20230817_object, array/style.css
@@ -11,16 +11,18 @@
 .box-list {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
+  /* width: 90%;
   margin: 0 auto;
-  gap: 10px;
+  gap: 10px; */
 }
 
 .box-item {
-  width: calc((100% - 30px)/3);
+  /* width: calc((100% - 30px)/3); */
+  width: calc((100% - 60px)/3);
   border: 1px solid #888;
   border-radius: 10px;
   overflow: hidden;
+  margin: 10px;
 }
 
 .box-item img {
