--- a/20230823_login-dark/style.css
+++ b/20230823_login-dark/style.css
@@ -59,6 +59,7 @@ body {
 }
 
 .input-wrap {
+  width: 100%;
   margin-top: 20px;
 }
 
@@ -72,15 +73,17 @@ body {
   border-radius: 5px;
 }
 
-label {
+.inp {
   position: relative;
 }
 
 .userid-txt,
 .userpw-txt {
   position: absolute;
-  top: 0;
+  top: 50%;
+  transform: translateY(-50%);
   left: 10px;
+  font-size: 14px;
   color: var(--txt-second-color);
 }
 
