--- a/20230823_login-dark/style.css
+++ b/20230823_login-dark/style.css
@@ -1,8 +1,7 @@
 /* :root는 html 문서 어디에서나 사용할 수 있다. */
-/* 사용자 지정 속성은 전용 표기법으로 정의 */
+/* 사용자 지정 속성은 전용 표기법으로 정의  */
 /* --이름 : 값 */
-/* 속성(color, bgc) : var(이름) */
-
+/* 속성(color, bgc) : var(--이름) */
 :root {
   --body-bg: #fafafa;
   --box-bg: #fff;
@@ -21,7 +20,6 @@
   --box-border-color: #262626;
   --txt-color: #d2d2d2;
 }
-
 
 * {
   margin: 0;
@@ -52,14 +50,14 @@ body {
 
 .form-container {
   width: 350px;
-  /* 상 / 좌우 / 하 */
+  /* 상 / 좌,우 / 하 */
   margin: 50px auto 0;
   padding: 10px;
 }
 
 .form-box {
   border: 1px solid var(--box-border-color);
-  border-radius: 0dvb5px;
+  border-radius: 5px;
   background-color: var(--box-bg);
 }
 
@@ -77,11 +75,14 @@ body {
   display: none;
 }
 
-/* body한테 .dark라는 클래스가 있을 때 (body는 생략 가능 */
-.dark .dark-logo {
+/* body한테 .dark라는 클래스가 있을 때
+  (body)는 생략 가능
+*/
+.drak .dark-logo {
   display: block;
 }
-.dark .dark-logo {
+
+.drak .light-logo {
   display: none;
 }
 
@@ -90,7 +91,7 @@ body {
 }
 
 .form-group {
-  margin: 0 40px 6px 40px;
+  margin: 0 30px 6px 30px;
 }
 
 .animate-input {
@@ -105,11 +106,12 @@ body {
   font-size: 12px;
   color: var(--txt-second-color);
   line-height: 36px;
-  /* 이벤트 제어
-  HTMl 요소에 정의된 이벤트를 조정할 수 있는 속성
-  none : 정의된 상태를 비활성화
-  auto : 비활성화된 이벤트가 다시 활성화
-  inherit : 부모 요소로부터 상속 */
+  /* 이벤트 제어 
+     HTML요소에 정의된 이벤트를 조정 할 수 있는 속성
+     none : 정의된 상태를 비활성화
+     auto : 비활성화된 이벤트 활성화
+     inherit : 부모 요소로 부터 상속
+  */
   pointer-events: none;
 }
 
@@ -139,20 +141,21 @@ body {
   transform: translateY(-50%);
   display: none;
 }
+
 .animate-input.active button {
   display: block;
 }
 
 .btn-group {
-  padding: 8px 40px;
+  padding: 8px 30px;
 }
 
 .btn-login {
   width: 100%;
-  padding: 6px 10px;
-  border-radius: 4px;
   color: var(--btn-color);
   background-color: var(--btn-bg);
+  padding: 6px 10px;
+  border-radius: 4px;
 }
 
 button:disabled {
@@ -173,10 +176,10 @@ button:disabled {
 }
 
 .or-box div:nth-child(2) {
-  margin: 0 18px;
   font-size: 12px;
   font-weight: 700;
   color: var(--txt-second-color);
+  margin: 0 18px;
 }
 
 .fb-btn {
@@ -216,7 +219,8 @@ button:disabled {
 }
 
 .join-box a {
-  color: var(btn-bg);
+  color: var(--btn-bg);
+  font-weight: 700;
 }
 
 .app-down {
@@ -239,19 +243,18 @@ button:disabled {
 
 .link-list {
   display: flex;
-  justify-self: center;
+  justify-content: center;
 }
 
 .link-list li a {
-  padding: 8px;
-  font-size: 12px;
   color: var(--txt-second-color);
+  font-size: 12px;
+  padding: 8px;
 }
 
 .copyright {
   padding: 12px 0;
-  text-align: center;
-  font-size: 14px;
   color: var(--txt-second-color);
+  font-size: 14px;
+  text-align: center;
 }
-
