--- a/20230825_fitness-flex/style.css
+++ b/20230825_fitness-flex/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all 1s ease-in;
+  transition: flex-basis 500ms ease-in-out;
 }
 
 .fiteness-slide {
