--- a/20230825_fitness-flex/style.css
+++ b/20230825_fitness-flex/style.css
@@ -1,110 +1,80 @@
+:root {
+  --cross-fit : #283491;
+  --weight : #f18684;
+  --yoga : #6ee2f1;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.fiteness-slide {
+.card-list {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-
-.fiteness-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 1000px;
+  width: 1200px;
   height: 400px;
+  margin: 100px auto;
 }
 
-.fiteness-list .fiteness-item:nth-child(1){
-  background-color: #283491;
-  background-image: url(./images/img1.png);
-  background-size: 200px, 300px;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-}
-.fiteness-list .fiteness-item:nth-child(1):hover {
-  flex-basis: 2000px;
-}
-.fiteness-list .fiteness-item:nth-child(1):hover h1 {
-  text-align: left;
-}
-.fiteness-list .fiteness-item:nth-child(1):hover p,
-.fiteness-list .fiteness-item:nth-child(1):hover button {
-  transform: translateX(0);
+.card-item {
+  position: relative;
+  flex-grow: 1;
+  padding: 25px;
+  color: #fff;
+  transition: flex 500ms ease-in;
 }
 
-
-.fiteness-list .fiteness-item:nth-child(2){
-  background-color: #f18684;
-  background-image: url(./images/img2.png);
-  background-size: 200px, 300px;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-}
-.fiteness-list .fiteness-item:nth-child(2):hover {
-  flex-basis: 2000px;
-}
-.fiteness-list .fiteness-item:nth-child(2):hover h1 {
-  text-align: left;
-}
-.fiteness-list .fiteness-item:nth-child(2):hover p,
-.fiteness-list .fiteness-item:nth-child(2):hover button {
-  transform: translateX(0);
+.card-item:nth-child(1) {
+  background-color: var(--cross-fit);
 }
 
-.fiteness-list .fiteness-item:nth-child(3){
-  background-color: #6ee2f1;
-  background-image: url(./images/img3.png);
-  background-size: 200px, 300px;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-}
-.fiteness-list .fiteness-item:nth-child(3):hover {
-  flex-basis: 2000px;
-}
-.fiteness-list .fiteness-item:nth-child(3):hover h1 {
-  text-align: left;
-}
-.fiteness-list .fiteness-item:nth-child(3):hover p,
-.fiteness-list .fiteness-item:nth-child(3):hover button {
-  transform: translateX(0);
+.card-item:nth-child(2) {
+  background-color: var(--weight);
 }
 
-
-.fiteness-item {
-  padding: 20px;
-  width: 100%;
-  height: 100%;
-  color: white;
-  overflow: hidden;
+.card-item:nth-child(3) {
+  background-color: var(--yoga);
 }
 
-.fiteness-item h1 {
+.card-item h2 {
+  font-size: 28px;
   text-align: center;
 }
 
-.fiteness-item p,
-.fiteness-item button {
-  transform: translateX(-300px);
+.caption {
+  display: none;
+  max-width: 230px;
+  font-size: 12px;
+  margin: 28px 0;
 }
 
-.fiteness-item p {
-  margin: 20px 0;
-}
-
-.fiteness-item button {
-  padding: 8px;
-  color: white;
-  border: 1px solid white;
-  border-radius: 20px;
+.caption button {
+  border: none;
+  outline: none;
+  color: #fff;
   background-color: transparent;
-}
-.fiteness-item button:hover {
-  opacity: .7;
+  border: 1px solid #fff;
+  border-radius: 30px;
+  padding: 8px 18px;
+  margin-top: 20px;
 }
 
+.card-item img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 200px;
+}
+
+.card-item:hover {
+  flex-grow: 2.5;
+}
+
+.card-item:hover .caption {
+  display: block;
+}
+
+.card-item:hover h2 {
+  text-align: left;
+}
