--- a/20230828_express/views/data.ejs
+++ b/20230828_express/views/data.ejs
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>DB에서 받아온 데이터</h1>
-  <h3>ID : <%=  %></h3>
   <!-- <h3>ID : <%= 데이터 바인딩 %></h3> -->
-  <h3>PW : </h3>
+  <h3>ID : <%= log[0] %></h3>
+  <h3>PW : <%= log[0] %></h3>
 </body>
 </html>
