--- a/20230828_express/views/data.ejs
+++ b/20230828_express/views/data.ejs
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <h1>DB에서 받아온 데이터</h1>
   <!-- <h3>ID : <%= 데이터 바인딩 %></h3> -->
-  <h3>ID : <%= log[0] %></h3>
-  <h3>PW : <%= log[0] %></h3>
+  <% for(let i=0; i < log.length; i++){ %>
+    <div class="info-box">
+      <h3>ID : <%= log[i].아이디 %></h3>
+      <h3>PW : <%= log[i].비밀번호 %></h3>
+    </div>
+  <% } %>
 </body>
 </html>
