--- a/20230828_express/style.css
+++ b/20230828_express/style.css
@@ -1,7 +1,20 @@
-body {
+/* body {
   background-image: url('./images/kitties-ge9835e1cb_1280.png');
 }
 
 h1 {
   color: red;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.info-box {
+  margin: 10px;
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
