--- a/20230828_express/style.css
+++ b/20230828_express/style.css
@@ -12,9 +12,37 @@ h1 {
   box-sizing: border-box;
 }
 
-.info-box {
+body {
+  padding: 40px;
+}
+
+.box-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 10px;
   padding: 10px 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+.info-box {
+  display: flex;
+  align-items: center;
+}
+
+.info-box p {
+  margin-right: 20px;
+  font-weight: 700;
+}
+
+.info-box:first-child h3 {
+  margin-right: 20px;
+}
+
+button {
+  border-radius: 10px;
+  border: none;
+  background-color: black;
+  color: white;
 }
