--- a/20230828_express/views/data.ejs
+++ b/20230828_express/views/data.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>Data</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
