--- a/20230828_express/views/edit.ejs
+++ b/20230828_express/views/edit.ejs
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Node.js">
   <meta name="author" content="k">
 
-  <title>login</title>
+  <title>edit</title>
 </head>
 <style>
   section {
