--- a/20230828_express/views/edit.ejs
+++ b/20230828_express/views/edit.ejs
@@ -35,7 +35,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">submenu1</a>
@@ -56,8 +56,15 @@
     <!-- method : 정보를 어떤 형태로 전달할건지 지정 GET / POST -->
     <!-- 서버랑 통신할 수 있는 방법 네가지 get, post, put, delete -->
     <!-- add 경로로 post 요청함 -->
-    <form action="/add" method="POST">
+
+    <!--
+        method-override 라이브러리를 사용하여 
+        form 태그에서 PUT요청을 할 때는 method가 아니라
+        action에 작성한다. /경로?_method=PUT
+    -->
+    <form action="/edit?_method=PUT" method="POST">
       <div class="form-group">
+        <input value="<%= data._id %>" type="text" style="display: none;" name="_id">
         <label>ID</label>
         <!-- 서버에서 input을 구분하기 위해 name 속성 작성 -->
         <input value="<%= data.아이디 %>" type="text" class="form-control" name="id">
@@ -66,7 +73,7 @@
         <label>PW</label>
         <input value="<%= data.비밀번호 %>" type="password" class="form-control" name="pw">
       </div>
-      <button type="submit" class="btn btn-success">Login</button>
+      <button type="submit" class="btn btn-success">수정</button>
     </form>
   </section>
 
