--- a/20230828_express/views/join.ejs
+++ b/20230828_express/views/join.ejs
@@ -1,189 +1,53 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Naver 회원가입 page">
-  <meta name="keywords" content="html, CSS, javascript">
-  <meta name="author" content="kai">
-  <title>네이버 회원가입 Join</title>
-  <link rel="stylesheet" href="./join.css">  
-  <!-- jQuery CDN -->
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+  integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+  <meta name="description" content="">
+  <meta name="keywords" content="Node.js">
+  <meta name="author" content="k">
+
+  <title>회원가입 페이지</title>
 </head>
+<style>
+  section {
+    padding: 30px;
+  }
+
+  section>div {
+    margin-bottom: 20px;
+  }
+</style>
 <body>
-  <div class="wrapper">
-    <header class="global-header">
-      <h1 class="logo">
-        <a href="https://www.naver.com">
-          <img src="./images/logo.png" alt="네이버 로고">
-        </a>
-      </h1>
-    </header>
+  <section>
+    <h1>회원가입</h1>
+    <form action="/add" method="POST">
+      <div class="form-group">
+        <label>이름</label>
+        <input type="text" class="form-control" name="name">
+      </div>
+      <div class="form-group">
+        <label>ID</label>
+        <input type="text" class="form-control" name="id">
+      </div>
+      <div class="form-group">
+        <label>PW</label>
+        <input type="password" class="form-control" name="pw">
+      </div>
+      <button type="submit" class="btn btn-success">회원가입</button>
+    </form>
+  </section>
 
-    <section class="join-box-list">
-      <form action="/join" id="join-form">
-        <div class="join-box-item userid">
-          <label>아이디
-            <div class="inputbox">
-              <!-- name : form action에 전달하는 파라미터 값
-                key, value 형식으로 데이터가 저장
-                {userid : user1} -->
-              <input type="text" name="userid">
-              <div>@naver.com</div>
-            </div>
-          </label>
-          <p class="warn"></p>
-        </div>
-
-        <div class="join-box-item userpw">
-          <label>비밀번호
-            <div class="inputbox">
-              <input type="password" name="userpw">
-              <div>
-                <p></p>
-                <img src="./images/m_icon_pw_step_01.png" alt="비밀번호 아이콘">
-              </div>
-            </div>
-          </label>
-          <p class="warn"></p>
-        </div> 
-
-        <div class="join-box-item userpw-chk">
-          <label>비밀번호 재확인
-            <div class="inputbox">
-              <input type="password" name="userpw-chk">
-              <div>
-                <img src="./images/m_icon_pw_step_02.png" alt="비밀번호 재확인 아이콘">
-              </div>
-            </div>
-          </label>
-          <p class="warn"></p>
-        </div>
-
-        <div class="join-box-item username">
-          <label>이름
-            <div class="inputbox">
-              <input type="text" name="username">
-            </div>
-          </label>
-          <p class="warn"></p>
-        </div>
-
-        <div class="join-box-item birth">
-          <label>생년월일
-            <div class="three-box">
-              <div class="inputbox">
-                <input class="birth-item" type="text" name="year" id="year" maxlength="4" placeholder="년(4자)">
-              </div>
-              <div class="inputbox">
-                <select class="birth-item" name="month" id="month">
-                  <option value="">월</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
-                  <option value="11">11</option>
-                  <option value="12">12</option>
-                </select>
-              </div>
-              <div class="inputbox">
-                <input class="birth-item" type="text" name="date" id="date" maxlength="2" placeholder="일">
-              </div>
-            </div>
-          </label>
-          <p class="warn"></p>
-        </div>
-
-        <div class="join-box-item gender">
-          <p>성별</p>
-          <div class="three-box">
-            <div class="inputbox">
-              <p>남자</p>
-              <input type="radio" name="gender" value="0" id="male">
-            </div>
-            <div class="inputbox">
-              <p>여자</p>
-              <input type="radio" name="gender" value="1" id="female">
-            </div>
-            <div class="inputbox">
-              <p>선택안함</p>
-              <input type="radio" name="gender" value="2" id="no-gender">
-            </div>
-          </div>
-        </div>
-
-        <div class="join-box-item usermail">
-          <label>본인 확인 이메일
-            <span class="text-secondary">(선택)</span>
-            <div class="inputbox">
-              <input type="text" name="usermail" id="email" placeholder="선택입력">
-            </div>
-          </label>
-          <p class="warn"></p>
-        </div>
-
-        <div class="join-box-item phone">
-          <p>휴대전화</p>
-          <div class="inputbox">
-            <select name="country">
-              <option value="233">가나 +233</option>
-              <option value="30">그리스 +30</option>
-              <option value="82" selected>대한민국 +82</option>
-              <option value="49">독일 +49</option>
-              <option value="960">몰디브 +960</option>
-              <option value="1">미국/캐나다 +1</option>
-              <option value="254">케냐 +254</option>
-            </select>
-          </div>
-
-          <div class="phonenum">
-            <div class="inputbox">
-              <input type="text" name="phonenum" placeholder="전화번호 입력">
-            </div>
-            <button type="button" id="veribtn" class="btn-primary">인증번호 받기</button>
-          </div>
-
-          <div class="inputbox disinput">
-            <input disabled type="text" id="veritext" name="veritext" placeholder="인증번호를 입력하세요">
-            <div></div>
-          </div>
-          <p class="warn"></p>
-        </div>
-
-        <div class="join-box-item address">
-          <p>주소</p>
-          <div class="postnum">
-            <div class="inputbox">
-              <input id="sample6_postcode" type="text" placeholder="우편번호">
-            </div>
-            <button onclick="sample6_execDaumPostcode()" type="button" class="btn-primary">우편번호 찾기</button>
-          </div>
-
-          <div class="inputbox">
-            <input id="sample6_address" type="text" placeholder="주소">
-          </div>
-
-          <div class="inputbox">
-            <input id="sample6_detailAddress" type="text" placeholder="상세주소">
-          </div>
-
-          <div class="inputbox">
-            <input id="sample6_extraAddress" type="text" placeholder="참고항목">
-          </div>
-        </div>
-        <button type="submit" id="joinbtn" class="btn-primary">가입하기</button>
-      </form>
-    </section>
-  </div>
-  <!-- <script src="./JS/join.js"></script> -->
-  <!-- <script src="./JS/join(jQuery).js"></script> -->
-  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-</body>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+  </script>
+</body> 
 </html>
