--- a/React/react-basic/src/App.css
+++ b/React/react-basic/src/App.css
@@ -15,3 +15,15 @@
 .hr {
 margin: 30px 0;
 }
+
+h2 {
+  color: red;
+}
+
+button {
+  padding: 5px;
+  margin: 10px 0;
+  border: none;
+  color: white;
+  background-color: black;
+}
