--- a/React/react-basic/src/App.css
+++ b/React/react-basic/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -30,4 +30,27 @@ button {
   border: none;
   color: white;
   background-color: black;
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
