--- a/React/react-basic/src/component/Main/Cards.css
+++ b/React/react-basic/src/component/Main/Cards.css
@@ -1,28 +1,23 @@
-
-.post-box-list {
+.post-card-list {
   display: flex;
-  margin-top: 80px;
   justify-content: center;
+  margin-top: 80px;
 }
 
-.post-box-item {
-  width: 250px;
-  margin-right: 30px;
-  padding: 80px 20px;
-  color: #fff;
-  text-align: center;
-  background-color: #000;
+.post-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 240px;
+  height: 300px;
   border-radius: 20px;
-  /* x, y 값 양수 : 우측, 하단 */
-  /* x, y 값 음수 : 좌측, 상단 */
-  box-shadow: 5px 5px #666;
+  margin-right: 30px;
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+  box-shadow: 5px 5px #999;
 }
 
-.post-box-item:last-child {
+.post-card:last-child {
   margin-right: 0;
 }
-
-.post-box-item p {
-  margin-top: 30px;
-}
-
